deploy: 468a7e69364e5a4b648ca78bd692248028459c68

--- a/_notebooks/aiyagari.ipynb
+++ b/_notebooks/aiyagari.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89bcd8ef",
+   "id": "c95a2f58",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aded3b7",
+   "id": "1d1382a8",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feb2ebb1",
+   "id": "72265db7",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8853a73",
+   "id": "68c5ec40",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f80f639",
+   "id": "27de38ff",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b50d8c3",
+   "id": "ce08a1a3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7849c213",
+   "id": "b04493f1",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9c211e",
+   "id": "7e24b26d",
    "metadata": {},
    "source": [
     "### References\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1cd8d76",
+   "id": "ef59596a",
    "metadata": {},
    "source": [
     "## The Economy"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30a7f9f0",
+   "id": "86eed3b8",
    "metadata": {},
    "source": [
     "### Households\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dce4ed21",
+   "id": "76dc669b",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -203,7 +203,7 @@
     "\n",
     "<a id='equation-aiy-rgk'></a>\n",
     "$$\n",
-    "r = A \\alpha  \\left( \\frac{N}{K} \\right)^{1 - \\alpha} - \\delta \\tag{3.1}\n",
+    "r = A \\alpha  \\left( \\frac{N}{K} \\right)^{1 - \\alpha} - \\delta \\tag{2.1}\n",
     "$$\n",
     "\n",
     "Using this expression and the firm’s first-order condition for labor, we can pin down\n",
@@ -212,13 +212,13 @@
     "\n",
     "<a id='equation-aiy-wgr'></a>\n",
     "$$\n",
-    "w(r) = A  (1 - \\alpha)  (A \\alpha / (r + \\delta))^{\\alpha / (1 - \\alpha)} \\tag{3.2}\n",
+    "w(r) = A  (1 - \\alpha)  (A \\alpha / (r + \\delta))^{\\alpha / (1 - \\alpha)} \\tag{2.2}\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "df3e7d60",
+   "id": "65d34f03",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -242,7 +242,7 @@
     "In practice, once parameter values are set, we can check for an SREE by the following steps\n",
     "\n",
     "1. pick a proposed quantity $ K $ for aggregate capital  \n",
-    "1. determine corresponding prices, with interest rate $ r $ determined by [(3.1)](#equation-aiy-rgk) and a wage rate $ w(r) $ as given in [(3.2)](#equation-aiy-wgr)  \n",
+    "1. determine corresponding prices, with interest rate $ r $ determined by [(2.1)](#equation-aiy-rgk) and a wage rate $ w(r) $ as given in [(2.2)](#equation-aiy-wgr)  \n",
     "1. determine the common optimal savings policy of the households given these prices  \n",
     "1. compute aggregate capital as the mean of steady state capital given this savings policy  \n",
     "\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a79b7544",
+   "id": "bbbe943b",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50b1fdbf",
+   "id": "70c42a33",
    "metadata": {
     "hide-output": false
    },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f0ca842",
+   "id": "608ffc76",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c2383c",
+   "id": "2d9f4dc8",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3128009d",
+   "id": "86fd1670",
    "metadata": {},
    "source": [
     "The plot shows asset accumulation policies at different values of the exogenous state.\n",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e131090c",
+   "id": "242be293",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   }
  ],
  "metadata": {
-  "date": 1706480858.8118958,
+  "date": 1706585843.715129,
   "filename": "aiyagari.md",
   "kernelspec": {
    "display_name": "Python",
