--- a/_notebooks/markov_perf.ipynb
+++ b/_notebooks/markov_perf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6f60f47a",
+   "id": "adbb8aed",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3173d242",
+   "id": "854fa1a3",
    "metadata": {},
    "source": [
     "# Markov Perfect Equilibrium\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8bb1536",
+   "id": "49a35291",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3921fbe7",
+   "id": "d8ad0694",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ec3ec1",
+   "id": "2b2e5dcf",
    "metadata": {
     "hide-output": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd6eb93e",
+   "id": "09f2342a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "579f9305",
+   "id": "d2d40432",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9dcf6f9",
+   "id": "d99c5983",
    "metadata": {},
    "source": [
     "## Background\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2557be8",
+   "id": "f8858ae7",
    "metadata": {},
    "source": [
     "### Example: A Duopoly Model\n",
@@ -139,12 +139,12 @@
     "\n",
     "<a id='equation-game2'></a>\n",
     "$$\n",
-    "p = a_0 - a_1 (q_1 +  q_2) \\tag{13.1}\n",
+    "p = a_0 - a_1 (q_1 +  q_2) \\tag{12.1}\n",
     "$$\n",
     "\n",
     "Here $ p = p_t $ is the price of the good, $ q_i = q_{it} $ is the output of firm $ i=1,2 $ at time $ t $ and $ a_0 > 0, a_1 >0 $.\n",
     "\n",
-    "In [(13.1)](#equation-game2) and what follows,\n",
+    "In [(12.1)](#equation-game2) and what follows,\n",
     "\n",
     "- the time subscript is suppressed when possible to simplify notation  \n",
     "- $ \\hat x $ denotes a next period value of variable $ x $  \n",
@@ -157,15 +157,15 @@
     "\n",
     "<a id='equation-game1'></a>\n",
     "$$\n",
-    "\\pi_i = p q_i - \\gamma (\\hat q_i - q_i)^2, \\quad \\gamma > 0 , \\tag{13.2}\n",
+    "\\pi_i = p q_i - \\gamma (\\hat q_i - q_i)^2, \\quad \\gamma > 0 , \\tag{12.2}\n",
     "$$\n",
     "\n",
-    "Substituting the inverse demand curve [(13.1)](#equation-game2) into [(13.2)](#equation-game1) lets us express the one-period payoff as\n",
+    "Substituting the inverse demand curve [(12.1)](#equation-game2) into [(12.2)](#equation-game1) lets us express the one-period payoff as\n",
     "\n",
     "\n",
     "<a id='equation-game3'></a>\n",
     "$$\n",
-    "\\pi_i(q_i, q_{-i}, \\hat q_i) = a_0 q_i - a_1 q_i^2 - a_1 q_i q_{-i} - \\gamma (\\hat q_i - q_i)^2 , \\tag{13.3}\n",
+    "\\pi_i(q_i, q_{-i}, \\hat q_i) = a_0 q_i - a_1 q_i^2 - a_1 q_i q_{-i} - \\gamma (\\hat q_i - q_i)^2 , \\tag{12.3}\n",
     "$$\n",
     "\n",
     "where $ q_{-i} $ denotes the output of the firm other than $ i $.\n",
@@ -182,13 +182,13 @@
     "<a id='equation-game4'></a>\n",
     "$$\n",
     "v_i(q_i, q_{-i}) = \\max_{\\hat q_i}\n",
-    "   \\left\\{\\pi_i (q_i, q_{-i}, \\hat q_i) + \\beta v_i(\\hat q_i, f_{-i}(q_{-i}, q_i)) \\right\\} \\tag{13.4}\n",
+    "   \\left\\{\\pi_i (q_i, q_{-i}, \\hat q_i) + \\beta v_i(\\hat q_i, f_{-i}(q_{-i}, q_i)) \\right\\} \\tag{12.4}\n",
     "$$\n",
     "\n",
     "**Definition**  A *Markov perfect equilibrium* of the duopoly model is a pair of value functions $ (v_1, v_2) $ and a pair of policy functions $ (f_1, f_2) $ such that, for each $ i \\in \\{1, 2\\} $ and each possible state,\n",
     "\n",
-    "- The value function $ v_i $ satisfies  Bellman equation [(13.4)](#equation-game4).  \n",
-    "- The maximizer on the right side of [(13.4)](#equation-game4)  equals $ f_i(q_i, q_{-i}) $.  \n",
+    "- The value function $ v_i $ satisfies  Bellman equation [(12.4)](#equation-game4).  \n",
+    "- The maximizer on the right side of [(12.4)](#equation-game4)  equals $ f_i(q_i, q_{-i}) $.  \n",
     "\n",
     "\n",
     "The adjective “Markov” denotes that the equilibrium decision rules depend only on the current values of the state variables, not other parts of their histories.\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44e4ee9a",
+   "id": "f33b2f58",
    "metadata": {},
    "source": [
     "### Computation\n",
@@ -215,7 +215,7 @@
     "<a id='equation-game6'></a>\n",
     "$$\n",
     "v_i^{j+1}(q_i, q_{-i}) = \\max_{\\hat q_i}\n",
-    "   \\left\\{\\pi_i (q_i, q_{-i}, \\hat q_i) + \\beta v^j_i(\\hat q_i, f_{-i}(q_{-i}, q_i)) \\right\\} \\tag{13.5}\n",
+    "   \\left\\{\\pi_i (q_i, q_{-i}, \\hat q_i) + \\beta v^j_i(\\hat q_i, f_{-i}(q_{-i}, q_i)) \\right\\} \\tag{12.5}\n",
     "$$\n",
     "\n",
     "These iterations can be challenging to implement computationally.\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39cb6a23",
+   "id": "476bce9a",
    "metadata": {},
    "source": [
     "## Linear Markov Perfect Equilibria\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df134017",
+   "id": "58f17310",
    "metadata": {},
    "source": [
     "### Coupled Linear Regulator Problems\n",
@@ -263,7 +263,7 @@
     "    u_{-it}' S_i u_{-it} +\n",
     "    2 x_t' W_i u_{it} +\n",
     "    2 u_{-it}' M_i u_{it}\n",
-    "\\right\\} \\tag{13.6}\n",
+    "\\right\\} \\tag{12.6}\n",
     "$$\n",
     "\n",
     "while the state evolves according to\n",
@@ -271,7 +271,7 @@
     "\n",
     "<a id='equation-orig-0'></a>\n",
     "$$\n",
-    "x_{t+1} = A x_t + B_1 u_{1t} + B_2 u_{2t} \\tag{13.7}\n",
+    "x_{t+1} = A x_t + B_1 u_{1t} + B_2 u_{2t} \\tag{12.7}\n",
     "$$\n",
     "\n",
     "Here\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ece6e789",
+   "id": "474571b0",
    "metadata": {},
    "source": [
     "### Computing Equilibrium\n",
@@ -303,7 +303,7 @@
     "- $ \\{F_{2t}\\} $ solves player 2’s problem, taking $ \\{F_{1t}\\} $ as given  \n",
     "\n",
     "\n",
-    "If we take $ u_{2t} = - F_{2t} x_t $ and substitute it into [(13.6)](#equation-orig-1) and [(13.7)](#equation-orig-0), then player 1’s problem becomes minimization of\n",
+    "If we take $ u_{2t} = - F_{2t} x_t $ and substitute it into [(12.6)](#equation-orig-1) and [(12.7)](#equation-orig-0), then player 1’s problem becomes minimization of\n",
     "\n",
     "\n",
     "<a id='equation-eq-mpe-p1p'></a>\n",
@@ -314,7 +314,7 @@
     "    x_t' \\Pi_{1t} x_t +\n",
     "    u_{1t}' Q_1 u_{1t} +\n",
     "    2 u_{1t}' \\Gamma_{1t} x_t\n",
-    "    \\right\\} \\tag{13.8}\n",
+    "    \\right\\} \\tag{12.8}\n",
     "$$\n",
     "\n",
     "subject to\n",
@@ -322,7 +322,7 @@
     "\n",
     "<a id='equation-eq-mpe-p1d'></a>\n",
     "$$\n",
-    "x_{t+1} = \\Lambda_{1t} x_t + B_1 u_{1t}, \\tag{13.9}\n",
+    "x_{t+1} = \\Lambda_{1t} x_t + B_1 u_{1t}, \\tag{12.9}\n",
     "$$\n",
     "\n",
     "where\n",
@@ -341,7 +341,7 @@
     "$$\n",
     "F_{1t}\n",
     "= (Q_1 + \\beta B_1' P_{1t+1} B_1)^{-1}\n",
-    "(\\beta B_1' P_{1t+1} \\Lambda_{1t} + \\Gamma_{1t}) \\tag{13.10}\n",
+    "(\\beta B_1' P_{1t+1} \\Lambda_{1t} + \\Gamma_{1t}) \\tag{12.10}\n",
     "$$\n",
     "\n",
     "where $ P_{1t} $ solves the matrix Riccati difference equation\n",
@@ -353,7 +353,7 @@
     "\\Pi_{1t} - (\\beta B_1' P_{1t+1} \\Lambda_{1t} +\n",
     "\\Gamma_{1t})' (Q_1 + \\beta B_1' P_{1t+1} B_1)^{-1}\n",
     "(\\beta B_1' P_{1t+1} \\Lambda_{1t} + \\Gamma_{1t}) +\n",
-    "\\beta \\Lambda_{1t}' P_{1t+1} \\Lambda_{1t} \\tag{13.11}\n",
+    "\\beta \\Lambda_{1t}' P_{1t+1} \\Lambda_{1t} \\tag{12.11}\n",
     "$$\n",
     "\n",
     "Similarly, decision rules that solve player 2’s problem are\n",
@@ -362,7 +362,7 @@
     "<a id='equation-orig-5'></a>\n",
     "$$\n",
     "F_{2t} = (Q_2 + \\beta B_2' P_{2t+1} B_2)^{-1}\n",
-    "(\\beta B_2' P_{2t+1} \\Lambda_{2t} + \\Gamma_{2t}) \\tag{13.12}\n",
+    "(\\beta B_2' P_{2t+1} \\Lambda_{2t} + \\Gamma_{2t}) \\tag{12.12}\n",
     "$$\n",
     "\n",
     "where $ P_{2t} $ solves\n",
@@ -374,19 +374,19 @@
     "\\Pi_{2t} - (\\beta B_2' P_{2t+1} \\Lambda_{2t} +\n",
     "\\Gamma_{2t})' (Q_2 + \\beta B_2' P_{2t+1} B_2)^{-1}\n",
     "(\\beta B_2' P_{2t+1} \\Lambda_{2t} + \\Gamma_{2t}) +\n",
-    "\\beta \\Lambda_{2t}' P_{2t+1} \\Lambda_{2t} \\tag{13.13}\n",
+    "\\beta \\Lambda_{2t}' P_{2t+1} \\Lambda_{2t} \\tag{12.13}\n",
     "$$\n",
     "\n",
     "Here, in all cases $ t = t_0, \\ldots, t_1 - 1 $ and the terminal conditions are $ P_{it_1} = 0 $.\n",
     "\n",
-    "The solution procedure is to use equations [(13.10)](#equation-orig-3), [(13.11)](#equation-orig-4), [(13.12)](#equation-orig-5), and [(13.13)](#equation-orig-6), and “work backwards” from time $ t_1 - 1 $.\n",
+    "The solution procedure is to use equations [(12.10)](#equation-orig-3), [(12.11)](#equation-orig-4), [(12.12)](#equation-orig-5), and [(12.13)](#equation-orig-6), and “work backwards” from time $ t_1 - 1 $.\n",
     "\n",
     "Since we’re working backward, $ P_{1t+1} $ and $ P_{2t+1} $ are taken as given at each stage.\n",
     "\n",
     "Moreover, since\n",
     "\n",
-    "- some terms on the right-hand side of [(13.10)](#equation-orig-3) contain $ F_{2t} $  \n",
-    "- some terms on the right-hand side of [(13.12)](#equation-orig-5) contain $ F_{1t} $  \n",
+    "- some terms on the right-hand side of [(12.10)](#equation-orig-3) contain $ F_{2t} $  \n",
+    "- some terms on the right-hand side of [(12.12)](#equation-orig-5) contain $ F_{1t} $  \n",
     "\n",
     "\n",
     "we need to solve these $ k_1 + k_2 $ equations simultaneously."
@@ -394,19 +394,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1437c5bb",
+   "id": "12a3f957",
    "metadata": {},
    "source": [
     "#### Key Insight\n",
     "\n",
-    "A key insight is that  equations  [(13.10)](#equation-orig-3) and [(13.12)](#equation-orig-5) are linear in $ F_{1t} $ and $ F_{2t} $.\n",
+    "A key insight is that  equations  [(12.10)](#equation-orig-3) and [(12.12)](#equation-orig-5) are linear in $ F_{1t} $ and $ F_{2t} $.\n",
     "\n",
-    "After these equations have been solved, we can take  $ F_{it} $ and solve for $ P_{it} $ in [(13.11)](#equation-orig-4) and [(13.13)](#equation-orig-6)."
+    "After these equations have been solved, we can take  $ F_{it} $ and solve for $ P_{it} $ in [(12.11)](#equation-orig-4) and [(12.13)](#equation-orig-6)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e3dc5e4",
+   "id": "8f6ac474",
    "metadata": {},
    "source": [
     "#### Infinite Horizon\n",
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f0232bb",
+   "id": "fe9710bb",
    "metadata": {},
    "source": [
     "### Implementation\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "456c17bb",
+   "id": "3b69e147",
    "metadata": {},
    "source": [
     "## Application\n",
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "859d2201",
+   "id": "0bdcc747",
    "metadata": {},
    "source": [
     "### A Duopoly Model\n",
@@ -486,7 +486,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "then we recover the  one-period  payoffs in expression [(13.3)](#equation-game3).\n",
+    "then we recover the  one-period  payoffs in expression [(12.3)](#equation-game3).\n",
     "\n",
     "The law of motion for the state $ x_t $ is $ x_{t+1} = A x_t + B_1 u_{1t} + B_2 u_{2t} $ where\n",
     "\n",
@@ -518,13 +518,13 @@
     "\n",
     "<a id='equation-eq-mpe-cle'></a>\n",
     "$$\n",
-    "x_{t+1} = (A - B_1 F_1 -B_1 F_2 ) x_t \\tag{13.14}\n",
+    "x_{t+1} = (A - B_1 F_1 -B_1 F_2 ) x_t \\tag{12.14}\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2cdbaf39",
+   "id": "c723a67c",
    "metadata": {},
    "source": [
     "### Parameters and Solution\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15238415",
+   "id": "1af57217",
    "metadata": {
     "hide-output": false
    },
@@ -589,14 +589,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87dc7714",
+   "id": "30ad3059",
    "metadata": {},
    "source": [
     "Running the code produces the following output.\n",
     "\n",
     "One way to see that $ F_i $ is indeed optimal for firm $ i $ taking $ F_2 $ as given is to use [QuantEcon.py](http://quantecon.org/quantecon-py)’s LQ class.\n",
     "\n",
-    "In particular, let’s take F2 as computed above, plug it into [(13.8)](#equation-eq-mpe-p1p) and [(13.9)](#equation-eq-mpe-p1d) to get firm 1’s problem and solve it using LQ.\n",
+    "In particular, let’s take F2 as computed above, plug it into [(12.8)](#equation-eq-mpe-p1p) and [(12.9)](#equation-eq-mpe-p1d) to get firm 1’s problem and solve it using LQ.\n",
     "\n",
     "We hope that the resulting policy will agree with F1 as computed above"
    ]
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a8e6df",
+   "id": "e567ea1e",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0e74449",
+   "id": "26b4e924",
    "metadata": {},
    "source": [
     "This is close enough for rock and roll, as they say in the trade.\n",
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fc5529b",
+   "id": "da766969",
    "metadata": {
     "hide-output": false
    },
@@ -640,26 +640,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e23cd50d",
+   "id": "c1abbab9",
    "metadata": {},
    "source": [
     "### Dynamics\n",
     "\n",
     "Let’s now investigate the dynamics of price and output in this simple duopoly model under the MPE policies.\n",
     "\n",
-    "Given our optimal policies $ F1 $ and $ F2 $, the state evolves according to [(13.14)](#equation-eq-mpe-cle).\n",
+    "Given our optimal policies $ F1 $ and $ F2 $, the state evolves according to [(12.14)](#equation-eq-mpe-cle).\n",
     "\n",
     "The following program\n",
     "\n",
     "- imports $ F1 $ and $ F2 $ from the previous program along with all parameters.  \n",
-    "- computes the evolution of $ x_t $ using [(13.14)](#equation-eq-mpe-cle).  \n",
+    "- computes the evolution of $ x_t $ using [(12.14)](#equation-eq-mpe-cle).  \n",
     "- extracts and plots industry output $ q_t = q_{1t} + q_{2t} $ and price $ p_t = a_0 - a_1 q_t $.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14454300",
+   "id": "b44fa3de",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53fda5ff",
+   "id": "373d4f8a",
    "metadata": {},
    "source": [
     "Note that the initial condition has been set to $ q_{10} = q_{20} = 1.0 $.\n",
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c897f9d0",
+   "id": "a6067c6c",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -719,10 +719,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b11bdeb4",
+   "id": "311cec22",
    "metadata": {},
    "source": [
-    "## Exercise 13.1\n",
+    "## Exercise 12.1\n",
     "\n",
     "Replicate the [pair of figures](#mpe-vs-monopolist) showing the comparison of output and prices for the monopolist and duopoly under MPE.\n",
     "\n",
@@ -733,10 +733,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11147e35",
+   "id": "fb9ca605",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 13.1](https://eqm.quantecon.org/#mp_ex1)\n",
+    "## Solution to[ Exercise 12.1](https://eqm.quantecon.org/#mp_ex1)\n",
     "\n",
     "First, let’s compute the duopoly MPE under the stated parameters"
    ]
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b515cef",
+   "id": "abc1a173",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "729ac280",
+   "id": "c7cd124b",
    "metadata": {},
    "source": [
     "Now we evaluate the time path of industry output and prices given\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b6bd10",
+   "id": "fd1e0a28",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "533c4156",
+   "id": "576c9097",
    "metadata": {},
    "source": [
     "Next, let’s have a look at the monopoly solution.\n",
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6429d1f3",
+   "id": "6d2239e3",
    "metadata": {
     "hide-output": false
    },
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2455a728",
+   "id": "2b6814cd",
    "metadata": {},
    "source": [
     "Let’s have a look at the different time paths"
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a1c8fe2",
+   "id": "3c3e82a2",
    "metadata": {
     "hide-output": false
    },
@@ -902,10 +902,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed89df75",
+   "id": "7a680be0",
    "metadata": {},
    "source": [
-    "## Exercise 13.2\n",
+    "## Exercise 12.2\n",
     "\n",
     "In this exercise, we consider a slightly more sophisticated duopoly problem.\n",
     "\n",
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "150d2ce5",
+   "id": "1dff57fd",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fad05cc",
+   "id": "545b7839",
    "metadata": {},
    "source": [
     "![https://eqm.quantecon.org/_static/lecture_specific/markov_perf/judd_fig2.png](https://eqm.quantecon.org/_static/lecture_specific/markov_perf/judd_fig2.png)\n",
@@ -1018,10 +1018,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8815554a",
+   "id": "5ad91f9f",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 13.2](https://eqm.quantecon.org/#mp_ex2)\n",
+    "## Solution to[ Exercise 12.2](https://eqm.quantecon.org/#mp_ex2)\n",
     "\n",
     "We treat the case $ \\delta = 0.02 $"
    ]
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e125082b",
+   "id": "3136f034",
    "metadata": {
     "hide-output": false
    },
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b89fa1e",
+   "id": "bbb31769",
    "metadata": {},
    "source": [
     "Recalling that the control and state are\n",
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76723412",
+   "id": "6c92fc29",
    "metadata": {
     "hide-output": false
    },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdfc2887",
+   "id": "8cdbd701",
    "metadata": {},
    "source": [
     "We can now compute the equilibrium using `qe.nnash`"
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a89673",
+   "id": "8a592c47",
    "metadata": {
     "hide-output": false
    },
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31bf9730",
+   "id": "0d36fa5f",
    "metadata": {},
    "source": [
     "Now let’s look at the dynamics of inventories, and reproduce the graph\n",
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dad7ba42",
+   "id": "6e2d61c0",
    "metadata": {
     "hide-output": false
    },
@@ -1179,7 +1179,7 @@
   }
  ],
  "metadata": {
-  "date": 1706480859.2348392,
+  "date": 1706585844.172657,
   "filename": "markov_perf.md",
   "kernelspec": {
    "display_name": "Python",
