--- a/_notebooks/matsuyama.ipynb
+++ b/_notebooks/matsuyama.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "23cc252c",
+   "id": "650c3fa2",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e33a6a8c",
+   "id": "1960fa97",
    "metadata": {},
    "source": [
     "# Globalization and Cycles"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0452669",
+   "id": "b6d18b33",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "417b6924",
+   "id": "74821b9f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "379789fb",
+   "id": "06bcffa6",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c437bbb",
+   "id": "df684189",
    "metadata": {},
    "source": [
     "### Background\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fd8071c",
+   "id": "d830cbcd",
    "metadata": {},
    "source": [
     "## Key Ideas\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "973a8129",
+   "id": "38b6e668",
    "metadata": {},
    "source": [
     "### Innovation Cycles\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4ed7904",
+   "id": "e4c1d64b",
    "metadata": {},
    "source": [
     "### Synchronization\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f1fa548",
+   "id": "966ef3c9",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f64641d",
+   "id": "dc3ed945",
    "metadata": {},
    "source": [
     "### Prices\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e8e7f37",
+   "id": "0ab8bdef",
    "metadata": {},
    "source": [
     "### New Varieties\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0592065",
+   "id": "1c82028e",
    "metadata": {},
    "source": [
     "### Law of Motion\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36699932",
+   "id": "843c9c88",
    "metadata": {},
    "source": [
     "## Simulation\n",
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39887742",
+   "id": "e5e32e2b",
    "metadata": {
     "hide-output": false
    },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf31782",
+   "id": "1f6ea091",
    "metadata": {},
    "source": [
     "### Time Series of Firm Measures\n",
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efa47e55",
+   "id": "09ba4863",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1deea22",
+   "id": "a207f8e0",
    "metadata": {},
    "source": [
     "In the first case, innovation in the two countries does not synchronize.\n",
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "911468c1",
+   "id": "9d63198c",
    "metadata": {},
    "source": [
     "### Basin of Attraction\n",
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf08be58",
+   "id": "a21035e6",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -844,26 +844,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da85b448",
+   "id": "3c3fc57f",
    "metadata": {},
    "source": [
-    "## Exercise 5.1\n",
+    "## Exercise 4.1\n",
     "\n",
     "Replicate the figure [shown above](#matsrep) by coloring initial conditions according to whether or not synchronization occurs from those conditions."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "226d6c65",
+   "id": "31e2edda",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 5.1](https://eqm.quantecon.org/#matsuyama_ex1)"
+    "## Solution to[ Exercise 4.1](https://eqm.quantecon.org/#matsuyama_ex1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90291237",
+   "id": "80a5c9b8",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04fe240",
+   "id": "70ee49ea",
    "metadata": {},
    "source": [
     "Additionally, instead of just seeing 4 plots at once, we might want to\n",
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad50d65f",
+   "id": "12d9fa66",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3f54f65",
+   "id": "d137b260",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   }
  ],
  "metadata": {
-  "date": 1706480859.2554653,
+  "date": 1706585844.194553,
   "filename": "matsuyama.md",
   "kernelspec": {
    "display_name": "Python",
