--- a/_notebooks/two_auctions.ipynb
+++ b/_notebooks/two_auctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "43a68707",
+   "id": "0c7360fe",
    "metadata": {},
    "source": [
     "# First-Price and Second-Price Auctions\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d750989",
+   "id": "bdcb2996",
    "metadata": {},
    "source": [
     "## First-Price Sealed-Bid Auction (FPSB)\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39c60eae",
+   "id": "d4a1ab16",
    "metadata": {},
    "source": [
     "### Characterization of FPSB Auction\n",
@@ -94,7 +94,7 @@
     "\n",
     "<a id='equation-eq-optbid1'></a>\n",
     "$$\n",
-    "\\mathbf{E}[y_{i} | y_{i} < v_{i}] \\tag{7.1}\n",
+    "\\mathbf{E}[y_{i} | y_{i} < v_{i}] \\tag{6.1}\n",
     "$$\n",
     "\n",
     "where $ v_{i} $ is  the valuation of bidder $ i $ and  $ y_{i} $ is the maximum valuation of all other bidders:\n",
@@ -102,7 +102,7 @@
     "\n",
     "<a id='equation-eq-optbid2'></a>\n",
     "$$\n",
-    "y_{i} = \\max_{j \\neq i} v_{j} \\tag{7.2}\n",
+    "y_{i} = \\max_{j \\neq i} v_{j} \\tag{6.2}\n",
     "$$\n",
     "\n",
     "A proof for this assertion is available  at the [Wikepedia page](https://en.wikipedia.org/wiki/Vickrey_auction) about Vickrey auctions"
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69abb6a9",
+   "id": "d4bc8222",
    "metadata": {},
    "source": [
     "## Second-Price Sealed-Bid Auction (SPSB)\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ff6b666",
+   "id": "366b2d77",
    "metadata": {},
    "source": [
     "## Characterization of SPSB Auction\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f76000c0",
+   "id": "d46ea681",
    "metadata": {},
    "source": [
     "## Uniform Distribution of Private Values\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e473701",
+   "id": "800cb7a8",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -165,12 +165,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25c8a28e",
+   "id": "40160ef6",
    "metadata": {},
    "source": [
     "## First price sealed bid auction\n",
     "\n",
-    "An optimal bid  for bidder $ i $ in a **FPSB**  is described by equations [(7.1)](#equation-eq-optbid1) and [(7.2)](#equation-eq-optbid2).\n",
+    "An optimal bid  for bidder $ i $ in a **FPSB**  is described by equations [(6.1)](#equation-eq-optbid1) and [(6.2)](#equation-eq-optbid2).\n",
     "\n",
     "When bids are i.i.d. draws from a uniform distribution, the CDF of $ y_{i} $ is\n",
     "\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe24dbe",
+   "id": "e9d85111",
    "metadata": {},
    "source": [
     "## Second Price Sealed Bid Auction\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc6b947",
+   "id": "835b5fbb",
    "metadata": {},
    "source": [
     "## Python Code"
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c8f1589",
+   "id": "e84a6d5a",
    "metadata": {
     "hide-output": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "236828d4",
+   "id": "6dd16f6e",
    "metadata": {},
    "source": [
     "We repeat an auction with 5 bidders for 100,000 times.\n",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f53d4be",
+   "id": "858fd0dd",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be886bf1",
+   "id": "adf20e23",
    "metadata": {},
    "source": [
     "We compute and sort bid price distributions   that emerge under both  FPSB and SPSB."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55236a5",
+   "id": "38e0a92d",
    "metadata": {
     "hide-output": false
    },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f2bfbbe",
+   "id": "57a87406",
    "metadata": {},
    "source": [
     "Let’s now plot the *winning* bids $ b_{(n)} $ (i.e. the payment) against valuations, $ v_{(n)} $ for both FPSB and SPSB.\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d96294",
+   "id": "6f91a341",
    "metadata": {
     "hide-output": false
    },
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecb0c367",
+   "id": "b8307205",
    "metadata": {},
    "source": [
     "## Revenue Equivalence Theorem\n",
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c50537e",
+   "id": "717ea62c",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11ab90e8",
+   "id": "cb10b2e7",
    "metadata": {},
    "source": [
     "**Summary of FPSB and SPSB results with uniform distribution on $ [0,1] $**\n",
@@ -438,12 +438,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e63496",
+   "id": "7b9b66bf",
    "metadata": {},
    "source": [
     "## Calculation of  Bid Price in FPSB\n",
     "\n",
-    "In equations [(7.1)](#equation-eq-optbid1) and [(7.1)](#equation-eq-optbid1), we displayed formulas for\n",
+    "In equations [(6.1)](#equation-eq-optbid1) and [(6.1)](#equation-eq-optbid1), we displayed formulas for\n",
     "optimal bids in a symmetric Bayesian Nash Equilibrium of a FPSB auction.\n",
     "\n",
     "$$\n",
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd1c8792",
+   "id": "4ecd2c7d",
    "metadata": {
     "hide-output": false
    },
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c331393a",
+   "id": "cabaa6a9",
    "metadata": {},
    "source": [
     "We can check the accuracy of our `evaluate_largest` method by comparing it with an analytical solution.\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a47f30d5",
+   "id": "82b725c5",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28af8feb",
+   "id": "cac23d68",
    "metadata": {},
    "source": [
     "## $ \\chi^2 $ Distribution\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b312f9c0",
+   "id": "42e6cd1b",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8103d84d",
+   "id": "d725c671",
    "metadata": {},
    "source": [
     "Now we’ll get Python to construct a bid price function"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90bdf352",
+   "id": "839b6e08",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4993fea",
+   "id": "ce7d602b",
    "metadata": {
     "hide-output": false
    },
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b726497b",
+   "id": "c1dd246f",
    "metadata": {},
    "source": [
     "We check our bid price function by computing and visualizing the result."
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9a23fcf",
+   "id": "7006d13b",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a9fa9ab",
+   "id": "2b8d6556",
    "metadata": {},
    "source": [
     "Now we can use Python to compute the probability distribution of the price paid by the winning bidder"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24946bc1",
+   "id": "064b5a85",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15dc8340",
+   "id": "ed6c7515",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "337fb966",
+   "id": "2d67360c",
    "metadata": {},
    "source": [
     "## 5 Code Summary\n",
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67028aa2",
+   "id": "fdb18b3e",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45a86345",
+   "id": "dd327fe9",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8621c3fa",
+   "id": "db4e0ed8",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84bd4597",
+   "id": "e9a3217c",
    "metadata": {
     "hide-output": false
    },
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1255a2ae",
+   "id": "438c1692",
    "metadata": {
     "hide-output": false
    },
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d96ab83",
+   "id": "947247e3",
    "metadata": {},
    "source": [
     "## References\n",
@@ -883,7 +883,7 @@
   }
  ],
  "metadata": {
-  "date": 1706480859.52561,
+  "date": 1706585844.6455522,
   "filename": "two_auctions.md",
   "kernelspec": {
    "display_name": "Python",
