--- a/_notebooks/uncertainty_traps.ipynb
+++ b/_notebooks/uncertainty_traps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "230daeb3",
+   "id": "69bda0cf",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "201952a6",
+   "id": "5a21064d",
    "metadata": {},
    "source": [
     "# Uncertainty Traps"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb5f3bc",
+   "id": "67490979",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0264cb3",
+   "id": "f3f2d723",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef1f6d90",
+   "id": "89b0633f",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33b8a4f",
+   "id": "3a4c52ea",
    "metadata": {},
    "source": [
     "## The Model\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81164de1",
+   "id": "5cfad81d",
    "metadata": {},
    "source": [
     "### Fundamentals\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b036583",
+   "id": "27316f4c",
    "metadata": {},
    "source": [
     "### Output\n",
@@ -131,7 +131,7 @@
     "$$\n",
     "x_m = \\theta + \\epsilon_m\n",
     "\\quad \\text{where} \\quad\n",
-    "\\epsilon_m \\sim N \\left(0, \\gamma_x^{-1} \\right) \\tag{2.1}\n",
+    "\\epsilon_m \\sim N \\left(0, \\gamma_x^{-1} \\right) \\tag{1.1}\n",
     "$$\n",
     "\n",
     "Here the time subscript has been dropped to simplify notation.\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e608dae6",
+   "id": "0ed12519",
    "metadata": {},
    "source": [
     "### Information and Beliefs\n",
@@ -173,7 +173,7 @@
     "\n",
     "<a id='equation-update-mean'></a>\n",
     "$$\n",
-    "\\mu' = \\rho \\frac{\\gamma \\mu + M \\gamma_x X}{\\gamma + M \\gamma_x} \\tag{2.2}\n",
+    "\\mu' = \\rho \\frac{\\gamma \\mu + M \\gamma_x X}{\\gamma + M \\gamma_x} \\tag{1.2}\n",
     "$$\n",
     "\n",
     "\n",
@@ -182,14 +182,14 @@
     "\\gamma' =\n",
     "    \\left(\n",
     "    \\frac{\\rho^2}{\\gamma + M \\gamma_x} + \\sigma_\\theta^2\n",
-    "    \\right)^{-1} \\tag{2.3}\n",
+    "    \\right)^{-1} \\tag{1.3}\n",
     "$$\n",
     "\n",
     "These are standard Kalman filtering results applied to the current setting.\n",
     "\n",
-    "Exercise 1 provides more details on how [(2.2)](#equation-update-mean) and [(2.3)](#equation-update-prec) are derived and then asks you to fill in remaining steps.\n",
+    "Exercise 1 provides more details on how [(1.2)](#equation-update-mean) and [(1.3)](#equation-update-prec) are derived and then asks you to fill in remaining steps.\n",
     "\n",
-    "The next figure plots the law of motion for the precision in [(2.3)](#equation-update-prec)\n",
+    "The next figure plots the law of motion for the precision in [(1.3)](#equation-update-prec)\n",
     "as a 45 degree diagram, with one curve for each $ M \\in \\{0, \\ldots, 6\\} $.\n",
     "\n",
     "The other parameter values are $ \\rho = 0.99, \\gamma_x = 0.5, \\sigma_\\theta =0.5 $\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d20578f5",
+   "id": "1824bf0b",
    "metadata": {},
    "source": [
     "### Participation\n",
@@ -222,29 +222,29 @@
     "\n",
     "<a id='equation-pref1'></a>\n",
     "$$\n",
-    "\\mathbb E [ u(x_m - F_m) ] > c \\tag{2.4}\n",
+    "\\mathbb E [ u(x_m - F_m) ] > c \\tag{1.4}\n",
     "$$\n",
     "\n",
     "Here\n",
     "\n",
-    "- the mathematical expectation of $ x_m $ is based on [(2.1)](#equation-xgt) and beliefs $ N(\\mu, \\gamma^{-1}) $ for $ \\theta $  \n",
+    "- the mathematical expectation of $ x_m $ is based on [(1.1)](#equation-xgt) and beliefs $ N(\\mu, \\gamma^{-1}) $ for $ \\theta $  \n",
     "- $ F_m $ is a stochastic but pre-visible fixed cost, independent across time and firms  \n",
     "- $ c $ is a constant reflecting opportunity costs  \n",
     "\n",
     "\n",
-    "The statement that $ F_m $ is pre-visible means that it is realized at the start of the period and treated as a constant in [(2.4)](#equation-pref1).\n",
+    "The statement that $ F_m $ is pre-visible means that it is realized at the start of the period and treated as a constant in [(1.4)](#equation-pref1).\n",
     "\n",
     "The utility function has the constant absolute risk aversion form\n",
     "\n",
     "\n",
     "<a id='equation-pref2'></a>\n",
     "$$\n",
-    "u(x) = \\frac{1}{a} \\left(1 - \\exp(-a x) \\right) \\tag{2.5}\n",
+    "u(x) = \\frac{1}{a} \\left(1 - \\exp(-a x) \\right) \\tag{1.5}\n",
     "$$\n",
     "\n",
     "where $ a $ is a positive parameter.\n",
     "\n",
-    "Combining [(2.4)](#equation-pref1) and [(2.5)](#equation-pref2), entrepreneur $ m $ participates in the market (or is said to be active) when\n",
+    "Combining [(1.4)](#equation-pref1) and [(1.5)](#equation-pref2), entrepreneur $ m $ participates in the market (or is said to be active) when\n",
     "\n",
     "$$\n",
     "\\frac{1}{a}\n",
@@ -268,13 +268,13 @@
     "            -a \\mu + a F_m +\n",
     "            \\frac{a^2 \\left( \\frac{1}{\\gamma} + \\frac{1}{\\gamma_x} \\right)}{2}\n",
     "                \\right)\n",
-    "    \\right) - c  > 0 \\tag{2.6}\n",
+    "    \\right) - c  > 0 \\tag{1.6}\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "232ce573",
+   "id": "e7ced77f",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -291,7 +291,7 @@
     "The updating methods follow the laws of motion for $ \\theta $, $ \\mu $ and $ \\gamma $ given above.\n",
     "\n",
     "The method to evaluate the number of active firms generates $ F_1,\n",
-    "\\ldots, F_{\\bar M} $ and tests condition [(2.6)](#equation-firm-test) for each firm.\n",
+    "\\ldots, F_{\\bar M} $ and tests condition [(1.6)](#equation-firm-test) for each firm.\n",
     "\n",
     "The **init** method encodes as default values the parameters we’ll use in the simulations below"
    ]
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e76d027d",
+   "id": "03989430",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1059ad49",
+   "id": "f2088b15",
    "metadata": {},
    "source": [
     "In the results below we use this code to simulate time series for the major variables."
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d12a5fe",
+   "id": "27cfd646",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee5dd39",
+   "id": "cb78b005",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -420,12 +420,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a58000",
+   "id": "12dbeff7",
    "metadata": {},
    "source": [
-    "## Exercise 2.1\n",
+    "## Exercise 1.1\n",
     "\n",
-    "Fill in the details behind [(2.2)](#equation-update-mean) and [(2.3)](#equation-update-prec) based on\n",
+    "Fill in the details behind [(1.2)](#equation-update-mean) and [(1.3)](#equation-update-prec) based on\n",
     "the following standard result (see, e.g., p. 24 of [[YS05](https://eqm.quantecon.org/zreferences.html#id125)]).\n",
     "\n",
     "**Fact** Let $ \\mathbf x = (x_1, \\ldots, x_M) $ be a vector of IID draws\n",
@@ -449,10 +449,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3c671de",
+   "id": "d744b568",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 2.1](https://eqm.quantecon.org/#uncertainty_traps_ex1)\n",
+    "## Solution to[ Exercise 1.1](https://eqm.quantecon.org/#uncertainty_traps_ex1)\n",
     "\n",
     "This exercise asked you to validate the laws of motion for\n",
     "$ \\gamma $ and $ \\mu $ given in the lecture, based on the stated\n",
@@ -480,10 +480,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69242877",
+   "id": "5e7c566e",
    "metadata": {},
    "source": [
-    "## Exercise 2.2\n",
+    "## Exercise 1.2\n",
     "\n",
     "Modulo randomness, replicate the simulation figures shown above.\n",
     "\n",
@@ -492,10 +492,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6336a942",
+   "id": "b3e8dc3c",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 2.2](https://eqm.quantecon.org/#uncertainty_traps_ex2)\n",
+    "## Solution to[ Exercise 1.2](https://eqm.quantecon.org/#uncertainty_traps_ex2)\n",
     "\n",
     "First, let’s replicate the plot that illustrates the law of motion for\n",
     "precision, which is\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c6d07f",
+   "id": "71778bcd",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8895e73c",
+   "id": "02e20b23",
    "metadata": {},
    "source": [
     "The points where the curves hit the 45 degree lines are the long-run\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "899a5872",
+   "id": "d4699703",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed5653c",
+   "id": "4ef105b0",
    "metadata": {},
    "source": [
     "First, let’s see how well $ \\mu $ tracks $ \\theta $ in these\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbbeb298",
+   "id": "2c23ac7b",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c50d736",
+   "id": "1dbe54e1",
    "metadata": {},
    "source": [
     "Now let’s plot the whole thing together"
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd185a56",
+   "id": "fa8329ea",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fe7d20e",
+   "id": "c875c17c",
    "metadata": {},
    "source": [
     "If you run the code above you’ll get different plots, of course.\n",
@@ -675,7 +675,7 @@
   }
  ],
  "metadata": {
-  "date": 1706480859.6494987,
+  "date": 1706585844.669251,
   "filename": "uncertainty_traps.md",
   "kernelspec": {
    "display_name": "Python",
